standards/gnds-2.0-alpha/alpha/c/src/v2.0/common/Gridded3d.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// Gridded3d is the basic handle type in this file. Example:
//    // Create a default Gridded3d object:
//    Gridded3d handle = Gridded3dDefault();
// Functions involving Gridded3d are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_ALPHA_V2_0_COMMON_GRIDDED3D
#define C_INTERFACE_ALPHA_V2_0_COMMON_GRIDDED3D

#include "GNDStk.h"
#include "v2.0/common/Axes.h"
#include "v2.0/g3d/Array.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct Gridded3dClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ Gridded3d
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct Gridded3dClass *Gridded3d;

// --- Const-aware handles.
typedef const struct Gridded3dClass *const ConstHandle2ConstGridded3d;
typedef       struct Gridded3dClass *const ConstHandle2Gridded3d;
typedef const struct Gridded3dClass *      Handle2ConstGridded3d;
typedef       struct Gridded3dClass *      Handle2Gridded3d;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstGridded3d
Gridded3dDefaultConst();

// +++ Create, default
extern_c Handle2Gridded3d
Gridded3dDefault();

// --- Create, general, const
extern_c Handle2ConstGridded3d
Gridded3dCreateConst(
   ConstHandle2ConstAxes axes,
   ConstHandle2ConstArray array
);

// +++ Create, general
extern_c Handle2Gridded3d
Gridded3dCreate(
   ConstHandle2ConstAxes axes,
   ConstHandle2ConstArray array
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
Gridded3dAssign(ConstHandle2Gridded3d This, ConstHandle2ConstGridded3d from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
Gridded3dDelete(ConstHandle2ConstGridded3d This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
Gridded3dRead(ConstHandle2Gridded3d This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
Gridded3dWrite(ConstHandle2ConstGridded3d This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
Gridded3dPrint(ConstHandle2ConstGridded3d This);

// +++ Print to standard output, as XML
extern_c int
Gridded3dPrintXML(ConstHandle2ConstGridded3d This);

// +++ Print to standard output, as JSON
extern_c int
Gridded3dPrintJSON(ConstHandle2ConstGridded3d This);


// -----------------------------------------------------------------------------
// Child: axes
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
Gridded3dAxesHas(ConstHandle2ConstGridded3d This);

// --- Get, const
extern_c Handle2ConstAxes
Gridded3dAxesGetConst(ConstHandle2ConstGridded3d This);

// +++ Get, non-const
extern_c Handle2Axes
Gridded3dAxesGet(ConstHandle2Gridded3d This);

// +++ Set
extern_c void
Gridded3dAxesSet(ConstHandle2Gridded3d This, ConstHandle2ConstAxes axes);


// -----------------------------------------------------------------------------
// Child: array
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
Gridded3dArrayHas(ConstHandle2ConstGridded3d This);

// --- Get, const
extern_c Handle2ConstArray
Gridded3dArrayGetConst(ConstHandle2ConstGridded3d This);

// +++ Get, non-const
extern_c Handle2Array
Gridded3dArrayGet(ConstHandle2Gridded3d This);

// +++ Set
extern_c void
Gridded3dArraySet(ConstHandle2Gridded3d This, ConstHandle2ConstArray array);


// -----------------------------------------------------------------------------
// Custom functionality
// -----------------------------------------------------------------------------

#include "v2.0/common/Gridded3d/src/custom.h"

#undef extern_c
#endif