versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/Gridded3d.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalGridded3d
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function Gridded3dDefaultConst() &
      bind(C, name='Gridded3dDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function Gridded3dDefaultConst

!! Create, default
function Gridded3dDefault() &
      bind(C, name='Gridded3dDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function Gridded3dDefault

!! Create, general, const
function Gridded3dCreateConst( &
   axes, &
   array &
) &
      bind(C, name='Gridded3dCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: axes
   type(c_ptr), value :: array
   type(c_ptr) :: handle
end function Gridded3dCreateConst

!! Create, general
function Gridded3dCreate( &
   axes, &
   array &
) &
      bind(C, name='Gridded3dCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: axes
   type(c_ptr), value :: array
   type(c_ptr) :: handle
end function Gridded3dCreate

!! Assign
subroutine Gridded3dAssign(handleLHS, handleRHS) &
      bind(C, name='Gridded3dAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine Gridded3dAssign

!! Delete
subroutine Gridded3dDelete(handle) &
      bind(C, name='Gridded3dDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine Gridded3dDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function Gridded3dRead(handle, filename, filenameSize) &
      bind(C, name='Gridded3dRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function Gridded3dRead

!! Write to file
function Gridded3dWrite(handle, filename, filenameSize) &
      bind(C, name='Gridded3dWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function Gridded3dWrite

!! Print to standard output, in our prettyprinting format
function Gridded3dPrint(handle) &
      bind(C, name='Gridded3dPrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function Gridded3dPrint

!! Print to standard output, as XML
function Gridded3dPrintXML(handle) &
      bind(C, name='Gridded3dPrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function Gridded3dPrintXML

!! Print to standard output, as JSON
function Gridded3dPrintJSON(handle) &
      bind(C, name='Gridded3dPrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function Gridded3dPrintJSON


!! -----------------------------------------------------------------------------
!! Child: axes
!! -----------------------------------------------------------------------------

!! Has
function Gridded3dAxesHas(handle) &
      bind(C, name='Gridded3dAxesHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function Gridded3dAxesHas

!! Get, const
function Gridded3dAxesGetConst(handle) &
      bind(C, name='Gridded3dAxesGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function Gridded3dAxesGetConst

!! Get
function Gridded3dAxesGet(handle) &
      bind(C, name='Gridded3dAxesGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function Gridded3dAxesGet

!! Set
subroutine Gridded3dAxesSet(handle, fieldHandle) &
      bind(C, name='Gridded3dAxesSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine Gridded3dAxesSet


!! -----------------------------------------------------------------------------
!! Child: array
!! -----------------------------------------------------------------------------

!! Has
function Gridded3dArrayHas(handle) &
      bind(C, name='Gridded3dArrayHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function Gridded3dArrayHas

!! Get, const
function Gridded3dArrayGetConst(handle) &
      bind(C, name='Gridded3dArrayGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function Gridded3dArrayGetConst

!! Get
function Gridded3dArrayGet(handle) &
      bind(C, name='Gridded3dArrayGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function Gridded3dArrayGet

!! Set
subroutine Gridded3dArraySet(handle, fieldHandle) &
      bind(C, name='Gridded3dArraySet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine Gridded3dArraySet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalGridded3d
